add homepage to the package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shopinglist",
+  "homepage": "https://viktor1897.github.io/shopinglist/#",
   "private": true,
   "version": "0.0.0",
   "type": "module",
