--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopinglist",
-  "homepage": "https://viktor1897.github.io/shoping-list/#",
+  "homepage": "https://viktor1897.github.io/shoping-list/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
