--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.10",
     "firebase": "^10.9.0",
     "react": "^18.2.0",
